// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcDropdownSearch > filtering > should display custom no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No custom items have been found"
>
  No custom items have been found
</li>
`;

exports[`EcDropdownSearch > filtering > should display custom no results slot if no item matches 1`] = `
<li
  data-test="my-slot"
>
  <div>
    Random message - No custom items have been found
  </div>
</li>
`;

exports[`EcDropdownSearch > filtering > should display no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No results found"
>
  No results found
</li>
`;

exports[`EcDropdownSearch > filtering complex items > should display custom no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No custom items have been found"
>
  No custom items have been found
</li>
`;

exports[`EcDropdownSearch > filtering complex items > should display custom no results slot if no item matches 1`] = `
<li
  data-test="my-slot"
>
  <div>
    Random message - No custom items have been found
  </div>
</li>
`;

exports[`EcDropdownSearch > filtering complex items > should display no results message if no item matches 1`] = `
<li
  class="ec-dropdown-search__no-items"
  data-test="ec-dropdown-search__no-items"
  title="No results found"
>
  No results found
</li>
`;

exports[`EcDropdownSearch > should add a tooltip for any disabled item 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Item 1"
  >
    
    Item 1
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Item 2"
  >
    
    Item 2
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
    title="Item 3"
  >
    
    Item 3
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-ec-tooltip-mock-content="Random text"
    data-ec-tooltip-mock-placement="right"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
    title="Item 4"
  >
    
    Item 4
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
    title="Item 5"
  >
    
    Item 5
    
  </li>
  
  
</ul>
`;

exports[`EcDropdownSearch > should disable the popover when disabled is set 1`] = `
<ec-stub
  autosize="true"
  class="ec-dropdown-search__trigger"
  data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
  disabled="true"
  distance="8"
  placement="bottom-start"
  popperclass="ec-dropdown-search__popover"
  shift="false"
  shown="false"
>
  
  
  
  <div>
    <ul
      class="ec-dropdown-search__item-list"
      data-test="ec-dropdown-search__item-list"
    >
      <li
        class="ec-dropdown-search__search-area"
        data-test="ec-dropdown-search__search-area"
      >
        <svg
          class="ec-icon ec-dropdown-search__search-icon"
        >
          <use
            xlink:href="#ec-simple-search"
          />
        </svg>
        <input
          autocomplete="off"
          class="ec-dropdown-search__search-input"
          data-test="ec-dropdown-search__search-input"
          placeholder="Search..."
        />
      </li>
      <!--v-if-->
      
      <li
        class="ec-dropdown-search__no-items"
        data-test="ec-dropdown-search__no-items"
        title="No results found"
      >
        No results found
      </li>
      
    </ul>
  </div>
  
</ec-stub>
`;

exports[`EcDropdownSearch > should merge given popoverOptions > customised 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    offset="16"
    placement="top"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should merge given popoverOptions > default 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should merge given tooltipOptions and item.tooltip prop > customised 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="Content overridden by item"
          data-ec-tooltip-mock-placement="top"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Random Item"
        >
          
          Random Item
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should merge given tooltipOptions and item.tooltip prop > default 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="This reason should not be seen because it's overridden by tooltip.content."
          data-ec-tooltip-mock-placement="right"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Random Item"
        >
          
          Random Item
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should not show the items when the loading is set to true 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        <li>
          <div
            class="ec-loading"
            data-test="ec-loading"
          >
            <div
              class="ec-loading__backdrop ec-loading__backdrop--is-transparent"
              data-test="ec-loading__backdrop"
            >
              <svg
                class="ec-icon ec-loading__icon"
                data-test="ec-loading__icon"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-simple-loading"
                />
              </svg>
            </div>
            <div
              class="ec-loading__content ec-loading__content--is-transparent"
              data-test="ec-loading__content"
            >
              
              <div
                class="ec-dropdown-search__loading"
                data-test="ec-dropdown-search__loading"
              />
              
            </div>
          </div>
        </li>
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should pass information whether an item is selected to the item slot 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Item 1"
        >
          
          <div>
            0 - false
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
          title="Item 2"
        >
          
          <div>
            1 - false
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
          title="Item 3"
        >
          
          <div>
            2 - true
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="Random text"
          data-ec-tooltip-mock-placement="right"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
          title="Item 4"
        >
          
          <div>
            3 - false
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
          title="Item 5"
        >
          
          <div>
            4 - false
          </div>
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render all given items 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Item 1"
  >
    
    Item 1
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Item 2"
  >
    
    Item 2
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
    title="Item 3"
  >
    
    Item 3
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-ec-tooltip-mock-content="Random text"
    data-ec-tooltip-mock-placement="right"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
    title="Item 4"
  >
    
    Item 4
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
    title="Item 5"
  >
    
    Item 5
    
  </li>
  
  
</ul>
`;

exports[`EcDropdownSearch > should render as expected 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given cta slot 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <li
          class="ec-dropdown-search__cta-area"
          data-test="ec-dropdown-search__cta-area ec-mock ec-tooltip-mock"
        >
          
          <button>
            My CTA
          </button>
          
        </li>
        
        
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Item 1"
        >
          
          Item 1
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
          title="Item 2"
        >
          
          Item 2
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
          title="Item 3"
        >
          
          Item 3
          
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="Random text"
          data-ec-tooltip-mock-placement="right"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
          title="Item 4"
        >
          
          Item 4
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
          title="Item 5"
        >
          
          Item 5
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given cta slot with a tooltip 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <li
          class="ec-dropdown-search__cta-area"
          data-ec-tooltip-mock-content="Random tooltip"
          data-test="ec-dropdown-search__cta-area ec-mock ec-tooltip-mock"
        >
          
          <button>
            My CTA
          </button>
          
        </li>
        
        
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Item 1"
        >
          
          Item 1
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
          title="Item 2"
        >
          
          Item 2
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
          title="Item 3"
        >
          
          Item 3
          
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="Random text"
          data-ec-tooltip-mock-placement="right"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
          title="Item 4"
        >
          
          Item 4
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
          title="Item 5"
        >
          
          Item 5
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given custom attributes 1`] = `
<div
  class="my-custom-class ec-dropdown-search"
  data-test="my-data-test ec-dropdown-search"
  id="my-id"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given default slot 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    <a
      href="#"
    >
      Open me
    </a>
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given item slot 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
          title="Item 1"
        >
          
          <div>
            <strong>
              0.
            </strong>
            Item 1
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
          title="Item 2"
        >
          
          <div>
            <strong>
              1.
            </strong>
            Item 2
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
          title="Item 3"
        >
          
          <div>
            <strong>
              2.
            </strong>
            Item 3
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
          data-ec-tooltip-mock-content="Random text"
          data-ec-tooltip-mock-placement="right"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
          title="Item 4"
        >
          
          <div>
            <strong>
              3.
            </strong>
            Item 4
          </div>
          
        </li>
        <li
          class="ec-dropdown-search__item"
          data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
          title="Item 5"
        >
          
          <div>
            <strong>
              4.
            </strong>
            Item 5
          </div>
          
        </li>
        
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given items slot 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div>
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li>
          Items: 
          <pre>
            {
  "0": {
    "id": 1,
    "text": "Item 1"
  },
  "1": {
    "id": 2,
    "text": "Item 2"
  },
  "2": {
    "id": 3,
    "text": "Item 3"
  },
  "3": {
    "id": 4,
    "text": "Item 4",
    "disabled": true,
    "disabledReason": "Random text"
  },
  "4": {
    "id": 5,
    "text": "Item 5"
  },
  "key": 4
}
          </pre>
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given popover style 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div
      style="width: 1234px;"
    >
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render given popover style when it is a function 1`] = `
<div
  class="ec-dropdown-search"
  data-test="ec-dropdown-search"
>
  <ec-stub
    autosize="true"
    class="ec-dropdown-search__trigger"
    data-test="ec-popover-dropdown-search ec-stub ec-popover-stub"
    disabled="false"
    distance="8"
    placement="bottom-start"
    popperclass="ec-dropdown-search__popover"
    shift="false"
    shown="false"
  >
    
    
    
    <div
      style="width: 1234px;"
    >
      <ul
        class="ec-dropdown-search__item-list"
        data-test="ec-dropdown-search__item-list"
      >
        <li
          class="ec-dropdown-search__search-area"
          data-test="ec-dropdown-search__search-area"
        >
          <svg
            class="ec-icon ec-dropdown-search__search-icon"
          >
            <use
              xlink:href="#ec-simple-search"
            />
          </svg>
          <input
            autocomplete="off"
            class="ec-dropdown-search__search-input"
            data-test="ec-dropdown-search__search-input"
            placeholder="Search..."
          />
        </li>
        <!--v-if-->
        
        <li
          class="ec-dropdown-search__no-items"
          data-test="ec-dropdown-search__no-items"
          title="No results found"
        >
          No results found
        </li>
        
      </ul>
    </div>
    
  </ec-stub>
</div>
`;

exports[`EcDropdownSearch > should render sensitive class 1`] = `
<ul
  class="ec-dropdown-search__item-list my-sensitive-content-test-class"
  data-test="ec-dropdown-search__item-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
  <!--v-if-->
  
  <li
    class="ec-dropdown-search__no-items"
    data-test="ec-dropdown-search__no-items"
    title="No results found"
  >
    No results found
  </li>
  
</ul>
`;

exports[`EcDropdownSearch > should render the search by default 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-icon ec-dropdown-search__search-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Search..."
  />
</li>
`;

exports[`EcDropdownSearch > should use and update the v-model 1`] = `
<li
  class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
  data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
  title="Item 1"
>
  
  Item 1
  
</li>
`;

exports[`EcDropdownSearch > should use and update the v-model 2`] = `
<li
  class="ec-dropdown-search__item ec-dropdown-search__item--is-selected"
  data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
  title="Item 3"
>
  
  Item 3
  
</li>
`;

exports[`EcDropdownSearch > should use given list-data-test attribute 1`] = `
<ul
  class="ec-dropdown-search__item-list"
  data-test="ec-dropdown-search__item-list my-test-list"
>
  <li
    class="ec-dropdown-search__search-area"
    data-test="ec-dropdown-search__search-area"
  >
    <svg
      class="ec-icon ec-dropdown-search__search-icon"
    >
      <use
        xlink:href="#ec-simple-search"
      />
    </svg>
    <input
      autocomplete="off"
      class="ec-dropdown-search__search-input"
      data-test="ec-dropdown-search__search-input"
      placeholder="Search..."
    />
  </li>
  <!--v-if-->
  
  
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--0 ec-mock ec-tooltip-mock"
    title="Item 1"
  >
    
    Item 1
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--1 ec-mock ec-tooltip-mock"
    title="Item 2"
  >
    
    Item 2
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--2 ec-mock ec-tooltip-mock"
    title="Item 3"
  >
    
    Item 3
    
  </li>
  <li
    class="ec-dropdown-search__item ec-dropdown-search__item--is-disabled"
    data-ec-tooltip-mock-content="Random text"
    data-ec-tooltip-mock-placement="right"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--3 ec-mock ec-tooltip-mock"
    title="Item 4"
  >
    
    Item 4
    
  </li>
  <li
    class="ec-dropdown-search__item"
    data-test="ec-dropdown-search__item ec-dropdown-search__item--4 ec-mock ec-tooltip-mock"
    title="Item 5"
  >
    
    Item 5
    
  </li>
  
  
</ul>
`;

exports[`EcDropdownSearch > should use the placeholder for search input if given 1`] = `
<li
  class="ec-dropdown-search__search-area"
  data-test="ec-dropdown-search__search-area"
>
  <svg
    class="ec-icon ec-dropdown-search__search-icon"
  >
    <use
      xlink:href="#ec-simple-search"
    />
  </svg>
  <input
    autocomplete="off"
    class="ec-dropdown-search__search-input"
    data-test="ec-dropdown-search__search-input"
    placeholder="Random text"
  />
</li>
`;
